--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,26 @@
 {
-    "require": {
-        "elasticsearch/elasticsearch": "~1.0"
+  "name": "HZ Search Method",
+  "autoload": {
+    "psr-0": { "HZ\\Search": "src/"}
+  },
+  "require": {
+    "elasticsearch/elasticsearch": "~1.0",
+    "incenteev/composer-parameter-handler": "~2.0"
+  },
+  "scripts": {
+    "post-root-package-install": [
+      "SymfonyStandard\\Composer::hookRootPackageInstall"
+    ],
+    "post-install-cmd": [
+      "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
+    ],
+    "post-update-cmd": [
+      "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
+    ]
+  },
+  "extra": {
+    "incenteev-parameters": {
+        "file": "parameters.yml"
     }
+  }
 }
