Separate servers for js and php

--- a/parameters.yml.dist
+++ b/parameters.yml.dist
@@ -1,4 +1,5 @@
 parameters:
-  elastic.server:   "http://77.169.186.211:29200"
-  elastic.index:    hzbwnature
-  index.url:        "http://wiki.local/index.php"
+  elastic.server:    "http://localhost:9200"
+  elastic.server.js: "http://77.169.186.211:29200"
+  elastic.index:     hzbwnature
+  index.url:         "http://wiki.local/index.php"
