--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
   },
   "require": {
     "elasticsearch/elasticsearch": "~1.0",
-    "incenteev/composer-parameter-handler": "~2.0"
+    "incenteev/composer-parameter-handler": "~2.0",
+    "composer/installers": "~1.0"
   },
   "scripts": {
     "post-install-cmd": [
